DBClientConnection::call needs to call checkConnection to reconnect if the previous socket was failed SERVER-4385